// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileCount > should compile COUNT with WHERE 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "defaultOrder": null,
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "primaryKeys": [
          "id",
        ],
        "relations": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    18,
  ],
  "text": "SELECT COUNT(*) AS \`count\` FROM \`app\`.\`users\` AS \`t0\` WHERE \`t0\`.\`age\` > ?",
}
`;

exports[`compileCount > should compile COUNT(*) query 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "defaultOrder": null,
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "primaryKeys": [
          "id",
        ],
        "relations": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [],
  "text": "SELECT COUNT(*) AS \`count\` FROM \`app\`.\`users\` AS \`t0\`",
}
`;

exports[`compileQuery > should compile SELECT with CTE (WITH clause) 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "defaultOrder": null,
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "primaryKeys": [
          "id",
        ],
        "relations": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    18,
  ],
  "text": "WITH \`active_users\` AS (SELECT * FROM \`app\`.\`users\` WHERE \`age\` > ?) SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`active_users\` AS \`t0\`",
}
`;

exports[`compileQuery > should compile SELECT with GROUP BY 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "defaultOrder": null,
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "primaryKeys": [
          "id",
        ],
        "relations": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` GROUP BY \`t0\`.\`name\`",
}
`;

exports[`compileQuery > should compile SELECT with GROUP BY and HAVING 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "defaultOrder": null,
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "primaryKeys": [
          "id",
        ],
        "relations": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    5,
  ],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` GROUP BY \`t0\`.\`name\` HAVING \`t0\`.\`age\` > ?",
}
`;

exports[`compileQuery > should compile SELECT with LIMIT and OFFSET 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "defaultOrder": null,
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "primaryKeys": [
          "id",
        ],
        "relations": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    10,
    20,
  ],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` LIMIT ? OFFSET ?",
}
`;

exports[`compileQuery > should compile SELECT with ORDER BY (NULLS LAST emulation) 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "defaultOrder": null,
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "primaryKeys": [
          "id",
        ],
        "relations": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` ORDER BY (\`t0\`.\`name\` IS NULL), \`t0\`.\`name\` ASC",
}
`;

exports[`compileQuery > should compile SELECT with WHERE 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "defaultOrder": null,
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "primaryKeys": [
          "id",
        ],
        "relations": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    "Alice",
  ],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\` WHERE \`t0\`.\`name\` = ?",
}
`;

exports[`compileQuery > should compile SELECT with multiple CTEs 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "defaultOrder": null,
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "primaryKeys": [
          "id",
        ],
        "relations": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [
    18,
    "Alice",
  ],
  "text": "WITH \`cte1\` AS (SELECT * FROM \`app\`.\`users\` WHERE \`age\` > ?), \`cte2\` AS (SELECT * FROM \`app\`.\`users\` WHERE \`name\` = ?) SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\`",
}
`;

exports[`compileQuery > should compile a basic SELECT query 1`] = `
{
  "aliasMap": [
    {
      "metadata": {
        "defaultOrder": null,
        "entity": {
          "cache": null,
          "comment": null,
          "database": null,
          "decorator": "Entity",
          "name": "users",
          "namespace": "app",
        },
        "fields": [
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "id",
            "max": null,
            "min": null,
            "name": "id",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "uuid",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "name",
            "max": null,
            "min": null,
            "name": "name",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "email",
            "max": null,
            "min": null,
            "name": "email_address",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "string",
          },
          {
            "arrayType": null,
            "collation": null,
            "comment": null,
            "computed": null,
            "decorator": "Field",
            "default": null,
            "embedded": null,
            "encrypted": null,
            "enum": null,
            "hideOn": [],
            "key": "age",
            "max": null,
            "min": null,
            "name": "age",
            "nullable": false,
            "order": null,
            "precision": null,
            "readonly": false,
            "scale": null,
            "schema": null,
            "transform": null,
            "type": "integer",
          },
        ],
        "filters": [],
        "generated": [],
        "primaryKeys": [
          "id",
        ],
        "relations": [],
      },
      "relationKey": null,
      "schema": "app",
      "tableAlias": "t0",
      "tableName": "users",
    },
  ],
  "params": [],
  "text": "SELECT \`t0\`.\`id\` AS \`t0_id\`, \`t0\`.\`name\` AS \`t0_name\`, \`t0\`.\`email_address\` AS \`t0_email\`, \`t0\`.\`age\` AS \`t0_age\` FROM \`app\`.\`users\` AS \`t0\`",
}
`;
